# RTVLASSLIM

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
artifacts/: README.md  px4_monitor_nominal_report.json  px4_monitor_profile_report.json
artifacts/spoof_suites/: px4_climb_realistic_spoof_suite.csv  px4_climb_realistic_spoof_suite.json  px4_forward_realistic_spoof_suite.csv  px4_forward_realistic_spoof_suite.json  px4_hover_realistic_spoof_suite.csv  px4_hover_realistic_spoof_suite.json  px4_turn_realistic_spoof_suite.csv  px4_turn_realistic_spoof_suite.json
artifacts/sweeps/: px4_climb_adversarial_sweep.csv  px4_climb_adversarial_sweep.json  (+6 more)
docs/: ALGORITHM.md  BASELINES.md  FAILURE_ANALYSIS.md  FORENSICS.md  PRE_PHASE1_ASSESSMENT.md  REPRODUCE.md  SPOOF_DATASETS.md  THREAT_MODEL.md  benchmark-summary.md  repository-layout.md  verification.md
examples/: README.md  capture_monitor_dataset.rs  gps_spoof.rs  mavlink_dump.rs  mavlink_sniff.rs  profile_monitor_dataset.rs  px4_sitl_live.rs  px4_spoof_proxy.rs  report_nominal_dataset.rs  run_adversarial_sweep.rs  run_monitor_benchmark.rs  run_realistic_spoof_suite.rs  run_texbat_ablation.rs  run_texbat_baselines.rs  run_texbat_harness.rs  run_validation.rs  synthetic_validation.csv  verify_evidence.rs
scripts/: README.md  download_texbat_processed.ps1  download_texbat_processed.sh  run_px4_sitl_live.ps1  wsl_inline_live.sh  wsl_inline_sniff.sh  wsl_px4_benchmark.sh  wsl_px4_gradual_spoof.sh  wsl_px4_live_spoof.sh  wsl_px4_multi_mission_benchmark.sh
src/: lib.rs
(+18 files in other folders)
